--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.6.5
 Markdown==2.4.1
 South==1.0
+coverage==3.7.1
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-jenkins==0.16.2
 django-toolbelt==0.0.1
 feedparser==5.1.3
 gunicorn==19.0.0
