--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.6.5
 Markdown==2.4.1
 South==1.0
+astroid==1.1.1
 coverage==3.7.1
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -8,6 +9,8 @@ django-jenkins==0.16.2
 django-toolbelt==0.0.1
 feedparser==5.1.3
 gunicorn==19.0.0
+logilab-common==0.62.0
 psycopg2==2.5.3
+pylint==1.2.1
 static3==0.5.1
 wsgiref==0.1.2
