--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 Django==1.6.5
 Markdown==2.4.1
+PyYAML==3.11
 South==1.0
 astroid==1.1.1
 coverage==3.7.1
+coveralls==0.4.2
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-jenkins==0.16.2
 django-toolbelt==0.0.1
+docopt==0.6.2
 feedparser==5.1.3
 gunicorn==19.0.0
 logilab-common==0.62.0
 psycopg2==2.5.3
 pylint==1.2.1
+requests==2.3.0
 static3==0.5.1
 wsgiref==0.1.2
