--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.6.5
-Markdown==2.4.1
 PyYAML==3.11
+Pygments==1.6
 South==1.0
 astroid==1.1.1
 coverage==3.7.1
@@ -13,6 +13,7 @@ docopt==0.6.2
 feedparser==5.1.3
 gunicorn==19.0.0
 logilab-common==0.62.0
+markdown2==2.2.1
 psycopg2==2.5.3
 pylint==1.2.1
 requests==2.3.0
