--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coverage==3.7.1
 coveralls==0.4.2
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-bootstrap-form==3.1
 django-jenkins==0.16.2
 django-toolbelt==0.0.1
 docopt==0.6.2
