--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-bootstrap-form==3.1
 django-jenkins==0.16.2
 django-toolbelt==0.0.1
 docopt==0.6.2
+factory-boy==2.4.1
 feedparser==5.1.3
 gunicorn==19.0.0
 logilab-common==0.62.0
