--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ markdown2==2.2.1
 psycopg2==2.5.4
 pygments-style-solarized==0.1.1
 pylint==1.3.1
+pysolr==3.2.0
 requests==2.4.1
 static3==0.5.1
 wsgiref==0.1.2
