--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-haystack==2.3.1
 django-jenkins==0.16.3
 django-toolbelt==0.0.1
 docopt==0.6.2
+elasticsearch==1.2.0
 factory-boy==2.4.1
 feedparser==5.1.3
 gunicorn==19.1.1
@@ -19,7 +20,9 @@ markdown2==2.2.1
 psycopg2==2.5.4
 pygments-style-solarized==0.1.1
 pylint==1.3.1
-pysolr==3.2.0
 requests==2.4.1
+simplejson==3.6.5
+six==1.8.0
 static3==0.5.1
+urllib3==1.9.1
 wsgiref==0.1.2
